--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"minTileSize":"120","tileFontSize":"8","planeColor":"#ff0000","excisionColor":"#ffaf00","jointColor":"#bebebe","mirrorColor":"#f5f5f5","activeTileColor":"#5ace77","standartTileWidth":585,"standartTileHeight":585,"standartTileJoint":15}
+{"minTileSize":"120","tileFontSize":8,"planeColor":"#ff0000","excisionColor":"#ffaf00","jointColor":"#bebebe","mirrorColor":"#f5f5f5","activeTileColor":"#ffa768","standartTileWidth":585,"standartTileHeight":585,"standartTileJoint":15}
